# roogle

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE-MIT  Procfile  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/index/: answer_of_everything.json
assets/query/: align_of.json  answer_of_everything.json
roogle/: Cargo.toml
roogle-api/: Cargo.toml
roogle-api/src/: main.rs
roogle-engine/: Cargo.toml
roogle-engine/src/: approx.rs  compare.rs  exec.rs  lib.rs  parse.rs  search.rs  types.rs
roogle-engine/src/query/: mod.rs  parse.rs
roogle-index/: Cargo.toml
roogle-index/set/: libstd.json
roogle-index/src/: types.rs
roogle-indexer/: Cargo.toml
roogle-util/: Cargo.toml
roogle-util/src/: lib.rs
roogle/src/: main.rs
src/: main.rs
