[package]
name = "roogle"
version = "0.1.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2018"
description = "A Rust API search engine"
readme = "README.md"
repository = "https://github.com/hkmatsumoto/roogle"
license = "MIT OR Apache-2.0"

[dependencies]
nom = "6.2"
roogle-engine = { version = "0.1.1", path = "roogle-engine" }
roogle-index = { version = "0.1.0", path = "roogle-index" }
rustyline = "8.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
