[package]
name = "roogle-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates_io_api = "0.7"
reqwest = "0.11"
rocket = "0.5.0-rc.1"
roogle-engine = { version = "0.1.7", path = "../roogle-engine" }
serde_json = "1.0"
tempfile = "3.2.0"

[[bin]]
name = "index_crate"
path = "bin/index_crate.rs"
