[package]
name = "roogle-engine"
version = "0.1.1"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2018"
description = "A Rust API search engine"
repository = "https://github.com/hkmatsumoto/roogle"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
log-derive = "0.4"
nom = "6.2"
rustdoc-types = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
