[package]
name = "roogle-engine"
version = "1.0.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2018"
description = "A Rust API search engine"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenshtein = "1.0"
nom = "7.0"
rustdoc-types = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.7"
thiserror = "1.0"
tracing = "0.1"
