[package]
name = "roogle-util"
version = "0.1.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2021"
description = "Utilities for Roogle"
documentation = "https://docs.rs/roogle-util"
repository = "https://github.com/roogle-rs/roogle"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdoc-types = "0.5.0"
