[package]
name = "roogle"
version = "0.1.3"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2018"
description = "A Rust API search engine"
readme = "../README.md"
repository = "https://github.com/hkmatsumoto/roogle"
license = "MIT OR Apache-2.0"

[dependencies]
env_logger = "0.9"
nom = "6.2"
roogle-engine = { version = "0.1.4", path = "../roogle-engine" }
rustdoc-types = "0.3.0"
rustyline = "8.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
