[package]
name = "roogle"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = "0.5.0-rc.1"
serde_json = "1.0.68"
rustdoc-types = "0.5.0"
tracing-subscriber = "0.2"
tracing = "0.1"
tracing-tree = "0.1"

[dependencies.roogle-engine]
path = "../roogle-engine"
