[package]
name = "roogle"
version = "1.0.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2021"
description = "A Rust API search engine"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = "0.5.0-rc.1"
serde_json = "1.0.68"
rustdoc-types = "0.5.0"
tracing-subscriber = "0.2"
tracing = "0.1"
tracing-tree = "0.1"
structopt = "0.3.25"
serde = "1.0"

[dependencies.roogle-engine]
path = "../roogle-engine"
version = "1.0.2"

[dependencies.roogle-util]
path = "../roogle-util"
version = "0.1.0"
